tests/test_enum/good/quick_pattern_check.catala
## Article

```catala
new enum E:
  -- Case1 content int
  -- Case2

new scope A:
  param x content E
  param y content bool
  param z content bool

scope A:
  def x := Case1 content 2
  def y := x with Case1
  def z := x with Case2
```
