tests/test_enum/bad/quick_pattern_2.catala
@Article@

/*
new enum E:
  -- Case1 content int
  -- Case2

new enum F:
  -- Case3

new scope A:
  param x content E
  param y content bool
  param z content bool

new scope B:
  param x content E
  param y content bool
  param z content bool

scope A:
  def x := Case1 content 2
  def y := x with Case1
  def z := x with Case2

scope B:
  def x := Case2
  def y := x with Case3
*/